--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: plugins.buf.build
-          username: ${{ secrets.BUF_USER_NAME }}
+          username: ${{ secrets.BUF_USERNAME }}
           password: ${{ secrets.BUF_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v2
